test_regress/t/t_force_chained.out
%Error: t/t_force_chained.v:30:  got='h0 exp='h00000001
%Error: t/t_force_chained.v:36:  got='h0 exp='h00000002
%Error: t/t_force_chained.v:43:  got='h0 exp='h00000003
%Error: t/t_force_chained.v:49:  got='h0 exp='h00000003
